2004-05-18  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopyFtp.cc, FileCopyFtp.h: protect FXP if ssl-protect-fxp is
	  true for any of the two servers; try to turn off protection
	  if it fails.
	* ftpclass.cc, ftpclass.h: (copy_protect) new member.
	* resource.cc: ftp:ssl-protect-fxp can now have a closure.

2004-05-17  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: wait until LANG/OPTS UTF8 complete before sending
	  more commands; activate specified charset if utf8 activation
	  fail; actually send CLNT and HOST commands; activate charset
	  from Reconfig only if no utf8 activation commands pending.
	* ftpclass.cc: use ssl-protect-fxp in FXP mode; send CPSV even
	  if seems unsupported - no choice. (suggested by Tillmann Steinbrecher
	  <t-st@t-st.org> w/patch).
	* resource.cc: (ftp:ssl-protect-fxp) new setting.

2004-05-11  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.cc: call ShowRunStatus only if necessary.
	* PollVec.cc, PollVec.h: inline Empty method.
	* SMTask.cc, SMTask.h: inline Enter/Leave methods.
	* StatusLine.cc: (CanShowNow) new method.
	* ftpclass.cc, ftpclass.h: support CPSV; add utf8_activated flag;
	  added workaround for servers which refuse to do OPTS before login.

2004-05-07  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: check use-mlsd and use-site-chmod before connecting.

2004-05-06  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: fixed core dump in case of extra server reply; don't
	  unconditionally disconnect on 221 as some broken servers use it for
	  FEAT reply. (reported by Wang WenRui <wangwr@ustc.edu>)

2004-05-04  SHIOTA Shoichi <Shoichi.Shiota@lightwell.co.jp>

	* StatusLine.cc: don't write zero bytes to terminal - it can produce
	  unexpected results.

2004-04-29  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: store zero sized files properly.

2004-04-28  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: accept multiple AUTH lines in FEAT reply; check if